--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ else()
 endif()
 
 # memcpy and memcpyasync test
-CUDA_ADD_EXECUTABLE(equal_copy src/equal_copy.cu)
-CUDA_ADD_EXECUTABLE(equal_copy2 src/equal_copy2.cu)
-CUDA_ADD_EXECUTABLE(equal_copy3 src/equal_copy3.cu)
-CUDA_ADD_EXECUTABLE(memcpyasync src/memcpyasync.cu)
-CUDA_ADD_EXECUTABLE(memcpyasync2 src/memcpyasync2.cu)
-CUDA_ADD_EXECUTABLE(memcpyasync3 src/memcpyasync3.cu)
+CUDA_ADD_EXECUTABLE(equal_copy src/additional_test/equal_copy.cu)
+CUDA_ADD_EXECUTABLE(equal_copy2 src/additional_test/equal_copy2.cu)
+CUDA_ADD_EXECUTABLE(equal_copy3 src/additional_test/equal_copy3.cu)
+CUDA_ADD_EXECUTABLE(memcpyasync src/additional_test/memcpyasync.cu)
+CUDA_ADD_EXECUTABLE(memcpyasync2 src/additional_test/memcpyasync2.cu)
+CUDA_ADD_EXECUTABLE(memcpyasync3 src/additional_test/memcpyasync3.cu)
